--- a/404.html
+++ b/404.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="animation"></div>
+   <!-- <div class="animation"></div>-->
     <h1>404</h1>
     <p>Oops! The page you're looking for doesn't exist.</p>
     <a href="/">Go Back Home</a>
