--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button onclick="openModal('list-modal')">View List</button>
       </div>
       <div class="card" id="sinh-game">
-        <h3>Game</h3>
+        <h3>Sinh Game</h3>
         <p>Play interactive games developed by Sinh.</p>
         <button onclick="openModal('game-modal')">Play Now</button>
       </div>
