--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <h4>Tic Tac Toe <span style="color:red">•</span></h4>
         </div>
 </a>
-<a href="TheCube/index.html">
+<a href="TheCube/">
         <div class="game-item">
           <img src="https://cdn.pixabay.com/photo/2013/07/13/10/21/rubiks-cube-157058_1280.png" alt="Mey">
           <h4>The Cube <span style="color:#0dd012">•</span></h4>
