--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
       <span class="close-btn" onclick="closeModal('game-modal')">&times;</span>
       <h2>Available Game</h2>
       <div class="game-list">
-<a href="#">
+<a href="2048/">
         <div class="game-item">
           <img src="https://m.media-amazon.com/images/I/41znPjaR48L.png" alt="Mey">
-          <h4>Game 2048 <span style="color:red">•</span></h4>
+          <h4>Game 2048 <span style="color:#0dd012">•</span></h4>
         </div>
 </a>
-<a href="#">
+<a href="xo/">
         <div class="game-item">
           <img src="https://www.svgrepo.com/show/510273/tic-tac-toe.svg" alt="Mey">
-          <h4>Tic Tac Toe <span style="color:red">•</span></h4>
+          <h4>Tic Tac Toe <span style="color:#0dd012">•</span></h4>
         </div>
 </a>
 <a href="TheCube/">
@@ -94,19 +94,20 @@
           <h4>The Cube <span style="color:#0dd012">•</span></h4>
         </div>
 </a>
+
+        <div class="game-item">
+          <img src="mey/5296af1c-e617-4950-856c-0ed950099e3d.png" alt="Mey">
+          <h4>Testing<span style="color:yellow">•</span></h4>
+        </div>
       </div>
     </div>
   </div>
-
-  <!-- Lightbox Modal -->
   <div id="lightbox" class="modal">
     <div class="lightbox-content">
       <button class="lightbox-close" onclick="closeModal('lightbox')">&times;</button>
       <img src="" alt="Enlarged Image">
     </div>
   </div>
-
-  <!-- ======================= External JavaScript ======================= -->
   <script src="script.js"></script>
 </body>
 </html>
