--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <div class="game-item">
           <img src="mey/5296af1c-e617-4950-856c-0ed950099e3d.png" alt="Mey">
-          <h4>Testing<span style="color:yellow">•</span></h4>
+          <h4>Uavailable <span style="color:red">•</span></h4>
         </div>
       </div>
     </div>
