--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
   </div>
   <footer>
-    <p>&copy; 2024 Sinh. All rights reserved.</p>
+    <p>&copy; <span id="current-year"></span> Sinh. All rights reserved.</p>
   </footer>
   <div id="image-modal" class="modal">
     <div class="modal-content">
