--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
     </section>
   </div>
-  <footer>
-    <p>&copy; <span id="current-year"></span> Sinh. All rights reserved.</p>
+  <footer><!--<span id="current-year"></span>-->
+    <p>&copy; 2024 Sinh. All rights reserved.</p>
   </footer>
   <div id="image-modal" class="modal">
     <div class="modal-content">
