--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
   <div id="image-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('image-modal')">&times;</span>
-      <h2>Available PC Game</h2>    
+      <h2>Available For PC</h2>    
      <div class="list-section">
         <div class="list-item">
-          <a href="star-battle/">
+        <a href="star-battle/">
           <img src="mey/sinh-mey.png" alt="mey">
-          <h4>Star Battle<span style="color:#0dd012">•</span></h4>
-          </a>
+          <h4>Star Battle <span style="color:#0dd012">•</span></h4>
+        </a>
         </div>
+		</div>
     </div>
-      </div>
   </div>
   <div id="list-modal" class="modal">
     <div class="modal-content">
