--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <!-- Sinh Img Card -->
       <div class="card" id="sinh-img">
         <h3>PC Game</h3>
-        <p>Browse and explore images curated by Sinh.</p>
-        <button onclick="openModal('image-modal')">View Gallery</button>
+        <p>Play interactive games developed by Sinh, designed to entertain and challenge!</p>
+        <button onclick="openModal('image-modal')">Play Now</button>
       </div>
       <div class="card" id="sinh-list">
         <h3>Project </h3>
         <p>Check out the detailed list of items projects.</p>
-        <button onclick="openModal('list-modal')">View List</button>
+        <button onclick="openModal('list-modal')">View Project</button>
       </div>
       <div class="card" id="sinh-game">
         <h3>Game</h3>
