--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="km">
 <head>
   <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
     <meta charset="UTF-8">
@@ -9,40 +9,40 @@
 </head>
 <body>
   <header>
-    <h2>Welcome to My Website</h2>
+    <h2>សូមស្វាគមន៍មកកាន់គេហទំព័ររបស់ខ្ញុំ</h2>
     <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle Dark Mode">🌙</button>
   </header>
   <div class="container">
     <section class="intro">
-      <h2>Explore the Features</h2>
-      <p>Select an option below to get started.</p>
+      <h2>រុករកលក្ខណៈពិសេស</h2>
+      <p>ជ្រើសរើសជម្រើសខាងក្រោមដើម្បីចាប់ផ្តើម។</p>
     </section>
     <section class="cards">
       <!-- Sinh Img Card -->
       <div class="card" id="sinh-img">
-        <h3>PC Game</h3>
-        <p>Play interactive games developed by Sinh, designed to entertain and challenge!</p>
-        <button onclick="openModal('image-modal')">Play Now</button>
+        <h3>ហ្គេមកុំព្យូទ័រ</h3>
+        <p>លេងហ្គេមអន្តរកម្មដែលបង្កើតឡើងដោយ ស៊ីញ ដែលរចនាឡើងដើម្បីកម្សាន្ត និងប្រកួតប្រជែង!</p>
+        <button onclick="openModal('image-modal')">លេងឥឡូវនេះ</button>
       </div>
       <div class="card" id="sinh-list">
-         <h3>App</h3>
-        <p>a simple, intuitive tool for organizing and enhancing your daily life. Designed for ease and efficiency.</p>
-        <button onclick="openModal('list-modal')">View Project</button>
+         <h3>កម្មវិធី</h3>
+        <p>ឧបករណ៍ដ៏សាមញ្ញ និងវិចារណញាណសម្រាប់រៀបចំ និងបង្កើនជីវិតប្រចាំថ្ងៃរបស់អ្នក។ រចនាឡើងសម្រាប់ភាពងាយស្រួល និងប្រសិទ្ធភាព។</p>
+        <button onclick="openModal('list-modal')">បើកដំណើរការ</button>
       </div>
       <div class="card" id="sinh-game">
-        <h3>Game</h3>
-        <p>Play interactive games developed by Sinh.</p>
-        <button onclick="openModal('game-modal')">Play Now</button>
+        <h3>ហ្គេម</h3>
+        <p>លេងហ្គេមអន្តរកម្មដែលបង្កើតឡើងដោយ ស៊ីញ ។</p>
+        <button onclick="openModal('game-modal')">លេងឥឡូវនេះ</button>
       </div>
     </section>
   </div>
   <footer><!--<span id="current-year"></span>-->
-    <p>&copy; 2024 Sinh. All rights reserved.</p>
+    <p>&copy; © 2024 Sinh ។ រក្សាសិទ្ធិគ្រប់យ៉ាង</p>
   </footer>
   <div id="image-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('image-modal')">&times;</span>
-      <h2>PC GAME</h2>    
+      <h2>ហ្គេមកុំព្យូទ័រ</h2>    
      <div class="list-section">
 	     <a href="star-battle/">
         <div class="list-item">
@@ -56,7 +56,7 @@
   <div id="list-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('list-modal')">&times;</span>
-      <h2>App</h2>
+      <h2>កម្មវិធី</h2>
       <div class="list-section">
 	      <a href="relationship/">
         <div class="list-item">
@@ -70,7 +70,7 @@
   <div id="game-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('game-modal')">&times;</span>
-      <h2>Available Game</h2>
+      <h2>ហ្គេមដែលមាន</h2>
       <div class="game-list">
 <a href="2048/">
         <div class="game-item">
