--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h2>សូមស្វាគមន៍មកកាន់គេហទំព័ររបស់ខ្ញុំ</h2>
+    <h2>សូមស្វាគមន៍</h2>
     <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle Dark Mode">🌙</button>
   </header>
   <div class="container">
@@ -26,7 +26,7 @@
       </div>
       <div class="card" id="sinh-list">
          <h3>កម្មវិធី</h3>
-        <p>ឧបករណ៍ដ៏សាមញ្ញ និងវិចារណញាណសម្រាប់រៀបចំ និងបង្កើនជីវិតប្រចាំថ្ងៃរបស់អ្នក។ រចនាឡើងសម្រាប់ភាពងាយស្រួល និងប្រសិទ្ធភាព។</p>
+        <p>ឧបករណ៍ដ៏សាមញ្ញ រចនាឡើងសម្រាប់ភាពងាយស្រួល និងប្រសិទ្ធភាព។</p>
         <button onclick="openModal('list-modal')">បើកដំណើរការ</button>
       </div>
       <div class="card" id="sinh-game">
