--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- Sinh Img Card -->
       <div class="card" id="sinh-img">
         <h3>ហ្គេមកុំព្យូទ័រ</h3>
-        <p>លេងហ្គេមអន្តរកម្មដែលបង្កើតឡើងដោយ ស៊ីញ ដែលរចនាឡើងដើម្បីកម្សាន្ត និងប្រកួតប្រជែង!</p>
+        <p>លេងហ្គេមអន្តរកម្មដែលបង្កើតឡើងដោយ ស៊ីញ ដែលរចនាឡើងដើម្បីកម្សាន្ត</p>
         <button onclick="openModal('image-modal')">លេងឥឡូវនេះ</button>
       </div>
       <div class="card" id="sinh-list">
