--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
   </div>
   <footer><!--<span id="current-year"></span>-->
-    <p>&copy; © 2024 Sinh ។ រក្សាសិទ្ធិគ្រប់យ៉ាង</p>
+    <p>&copy; 2024 Sinh ។ រក្សាសិទ្ធិគ្រប់យ៉ាង</p>
   </footer>
   <div id="image-modal" class="modal">
     <div class="modal-content">
