--- a/relationship/index.html
+++ b/relationship/index.html
@@ -2,7 +2,8 @@
 <html lang="km">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Sinh</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script> <!-- Link to your external JavaScript file -->
