--- a/index.html
+++ b/index.html
@@ -94,10 +94,13 @@
           <img src="mey/5296af1c-e617-4950-856c-0ed950099e3d.png" alt="Mey">
           <h4>Unavailable <span style="color:red">•</span></h4>
         </div>
+
+<a href="Tower/">
        <div class="game-item">
           <img src="https://childrenandmedia.org.au/assets/images/app-reviews/Stack.png" alt="Mey">
-          <h4>Stack <span style="color:red">•</span></h4>
+          <h4>Stack <span style="color:#0dd012">•</span></h4>
         </div>
+</a>
        <div class="game-item">
           <img src="https://upload.wikimedia.org/wikipedia/en/0/0a/Flappy_Bird_icon.png" alt="Mey">
           <h4>Flappy Bird <span style="color:red">•</span></h4>
