--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
           <h4>Relationship <span style="color:#0dd012">•</span></h4>
         </div>
 	      </a>
+
+	      	      <a href="synhai/">
+        <div class="list-item">
+          <img src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-09-512.png" alt="mey">
+          <h4>Synh AI <span style="color:#0dd012">•</span></h4>
+        </div>
+	      </a>
              </div>
     </div>
   </div>
