--- a/synhai/index.html
+++ b/synhai/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="km">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
@@ -62,7 +62,7 @@
             </button>
             <div class="logo">
                 <i class="fas fa-robot logo-icon"></i>
-                <span>Synh *****AI Testing With <img alt="Verify" width="50" id="v1" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"></span>
+                <span>Synh ***AI With <img alt="Verify" width="50" id="v1" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"></span>
             </div>
             <div class="status">
                 <span id="connection-status">Online</span>
@@ -72,7 +72,7 @@
         <div class="chat-container">
             <div class="chat-window" id="chat-window">
                 <div class="welcome-message">
-                    <h2>សូមស្វាគមន៍មកកាន់ *****AI Made By Synh</h2>
+                    <h2>សូមស្វាគមន៍មកកាន់ ***AI Made By Synh</h2>
                     <p>ជំនួយការឆ្លាតវៃរបស់អ្នកត្រៀមខ្លួនជាស្រេចដើម្បីជួយជាមួយព័ត៌មាន គំនិតច្នៃប្រឌិត និងការដោះស្រាយបញ្ហា។ តើខ្ញុំអាចជួយអ្នកនៅថ្ងៃនេះដោយរបៀបណា?</p>
                     <div class="features-grid">
                         <div class="feature-card">
@@ -104,11 +104,11 @@
                 <div class="typing-dot"></div>
                 <div class="typing-dot"></div>
                 <div class="typing-dot"></div>
-                <span>*****AI កំពុងវាយអក្សរ</span>
+                <span>***AI កំពុងវាយអក្សរ</span>
             </div>
             
             <div class="input-area">
-                <textarea class="message-input" id="message-input" placeholder="សារទៅ *****AI..." rows="1"></textarea>
+                <textarea class="message-input" id="message-input" placeholder="សារទៅ ***AI..." rows="1"></textarea>
                 <button class="send-button" id="send-button">
                     <i class="fas fa-paper-plane"></i>
                 </button>
