--- a/synhai/index.html
+++ b/synhai/index.html
@@ -72,7 +72,7 @@
         <div class="chat-container">
             <div class="chat-window" id="chat-window">
                 <div class="welcome-message">
-                    <h2>សូមស្វាគមន៍មកកាន់ ***AI Made By Synh</h2>
+                    <h2>សូមស្វាគមន៍មកកាន់ ***AI Google</h2>
                     <p>ជំនួយការឆ្លាតវៃរបស់អ្នកត្រៀមខ្លួនជាស្រេចដើម្បីជួយជាមួយព័ត៌មាន គំនិតច្នៃប្រឌិត និងការដោះស្រាយបញ្ហា។ តើខ្ញុំអាចជួយអ្នកនៅថ្ងៃនេះដោយរបៀបណា?</p>
                     <div class="features-grid">
                         <div class="feature-card">
