--- a/synhai/index.html
+++ b/synhai/index.html
@@ -44,7 +44,7 @@
             <div class="user-profile">
                 <div class="user-avatar">YS</div>
                 <div class="user-info">
-                    <div class="user-name">Yan Synh Owner <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="https://static.xx.fbcdn.net/assets/?revision=1029768089004421&amp;name=fb-verifiedbadge-desktop&amp;density=1"></div>
+                    <div class="user-name">Yan Synh Owner <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="mey/v-mey.jpg"></div>
                     <div class="user-email">synh@company.com</div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
             </button>
             <div class="logo">
                 <i class="fas fa-robot logo-icon"></i>
-                <span>Synh ***AI With <img alt="Verify" width="50" id="v1" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"></span>
+                <span>Synh ***AI With <img alt="Verify" width="50" id="v1" title="Google" referrerpolicy="origin-when-cross-origin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"></span>
             </div>
             <div class="status">
                 <span id="connection-status">Online</span>
@@ -72,7 +72,7 @@
         <div class="chat-container">
             <div class="chat-window" id="chat-window">
                 <div class="welcome-message">
-                    <h2>សូមស្វាគមន៍មកកាន់ ***AI Google</h2>
+                    <h2>សូមស្វាគមន៍មកកាន់ ***AI</h2>
                     <p>ជំនួយការឆ្លាតវៃរបស់អ្នកត្រៀមខ្លួនជាស្រេចដើម្បីជួយជាមួយព័ត៌មាន គំនិតច្នៃប្រឌិត និងការដោះស្រាយបញ្ហា។ តើខ្ញុំអាចជួយអ្នកនៅថ្ងៃនេះដោយរបៀបណា?</p>
                     <div class="features-grid">
                         <div class="feature-card">
@@ -108,7 +108,7 @@
             </div>
             
             <div class="input-area">
-                <textarea class="message-input" id="message-input" placeholder="សារទៅ ***AI..." rows="1"></textarea>
+                <textarea class="message-input" id="message-input" placeholder="សារ ***AI..." rows="1"></textarea>
                 <button class="send-button" id="send-button">
                     <i class="fas fa-paper-plane"></i>
                 </button>
