--- a/synhai/index.html
+++ b/synhai/index.html
@@ -44,7 +44,7 @@
             <div class="user-profile">
                 <div class="user-avatar">YS</div>
                 <div class="user-info">
-                    <div class="user-name">Yan Synh Owner <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="mey/v-mey.jpg"></div>
+                    <div class="user-name">Yan Synh Owner <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="../mey/v-mey.jpg"></div>
                     <div class="user-email">synh@company.com</div>
                 </div>
             </div>
