--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <div class="list-section">
 	      <a href="relationship/">
         <div class="list-item">
-          <img src="mey/3507038.png" alt="mey">
-          <h4>Relationship <span style="color:#0dd012">•</span></h4>
+          <img src="mey/3133235.png" alt="mey">
+          <h4>Date <span style="color:#0dd012">•</span></h4>
         </div>
 	      </a>
 
