--- a/synhai/index.html
+++ b/synhai/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="km">
+<!DOCTYPE html><html lang="km">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
@@ -42,9 +41,9 @@
         
         <div class="sidebar-footer">
             <div class="user-profile">
-                <div class="user-avatar">YS</div>
+                <imh src="https://yansinh.github.io/csm/img/sinh.png" class="user-avatar">
                 <div class="user-info">
-                    <div class="user-name">Yan Synh Owner <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="../mey/v-mey.jpg"></div>
+                    <div class="user-name">Yan Synh <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="../mey/v-mey.jpg"></div>
                     <div class="user-email">synh@company.com</div>
                 </div>
             </div>
@@ -62,10 +61,10 @@
             </button>
             <div class="logo">
                 <i class="fas fa-robot logo-icon"></i>
-                <span>Synh ***AI With <img alt="Verify" width="50" id="v1" title="Google" referrerpolicy="origin-when-cross-origin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"></span>
+                <span>Synh ***AI </span>
             </div>
             <div class="status">
-                <span id="connection-status">Online</span>
+                <span id="connection-status"><img alt="GPU" width="50" id="v1" title="GPU running" referrerpolicy="origin-when-cross-origin" src="mey/fan.webp"></span>
             </div>
         </div>
         
@@ -116,5 +115,4 @@
         </div>
     </div>
   <script src="script.js"></script>
-</body>
-</html>
+</body></html>
