--- a/synhai/index.html
+++ b/synhai/index.html
@@ -41,7 +41,7 @@
         
         <div class="sidebar-footer">
             <div class="user-profile">
-                <imh src="https://yansinh.github.io/csm/img/sinh.png" class="user-avatar">
+                <img src="https://yansinh.github.io/csm/img/sinh.png" class="user-avatar">
                 <div class="user-info">
                     <div class="user-name">Yan Synh <img alt="Verify" id="v" title="Verify Account" referrerpolicy="origin-when-cross-origin" src="../mey/v-mey.jpg"></div>
                     <div class="user-email">synh@company.com</div>
@@ -64,7 +64,7 @@
                 <span>Synh ***AI </span>
             </div>
             <div class="status">
-                <span id="connection-status"><img alt="GPU" width="50" id="v1" title="GPU running" referrerpolicy="origin-when-cross-origin" src="mey/fan.webp"></span>
+                <span id="connection-status"><img alt="GPU" width="50" id="v1" title="GPU running" referrerpolicy="origin-when-cross-origin" src="../mey/fan.webp"></span>
             </div>
         </div>
         
