--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
 	      	      <a href="synhai/">
         <div class="list-item">
-          <img src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-09-512.png" alt="mey">
-          <h4>Chat AI <span style="color:#0dd012">•</span></h4>
+          <img src="https://yansinh.github.io/csm/img/sinh.png" alt="mey">
+          <h4>Synh Chat AI <span style="color:#0dd012">•</span></h4>
         </div>
 	      </a>
              </div>
