--- a/synhai/index.html
+++ b/synhai/index.html
@@ -6,7 +6,7 @@
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
