--- a/synhai/index.html
+++ b/synhai/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
+  <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
-  <link rel="stylesheet" href="style.css>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
