--- a/synhai/index.html
+++ b/synhai/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="status" id="connection-status">
         <i class="fas fa-circle"></i>
-        <span>Online</span>
+        <span>អនឡាញ</span>
       </div>
     </div>
     
