--- a/synhai/index.html
+++ b/synhai/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="km">
-<head>
+<!DOCTYPE html><html lang="km"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
-  <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" href="images/sinh.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,10 +23,10 @@
     </div>
     <div class="sidebar-footer">
       <div class="user-profile">
-        <div class="user-avatar">យ•ស</div>
+        <img src="icon/profile.jpg" class="user-avatar" alt="mey">
         <div class="user-info">
           <div class="user-name">យ៉ាន ស៊ីញ</div>
-          <div class="user-email">Admin of Ai</div>
+          <div class="user-email">© Synh Corporation</div>
         </div>
       </div>
     </div>
@@ -42,12 +40,14 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="logo">
-        <i class="fas fa-robot"></i>
+<!--        <i class="fas fa-robot"></i>-->
         <span>Synh AI</span>
       </div>
       <div class="status" id="connection-status">
         <i class="fas fa-circle"></i>
-        <span>អនឡាញ</span>
+         <i class="fas fa-circle" style="color:yellow"></i>
+          <i class="fas fa-circle" style="color:red"></i>
+        <span style="color:#1f2937">យ៉ាន ស៊ីញ</span>
       </div>
     </div>
     
@@ -131,6 +131,7 @@
     </div>
   </div>
 
-<script src="script.js" ></script>
-</body>
-</html>
+<script src="script.js"></script>
+
+
+</body></html>
