--- a/synhai/index.html
+++ b/synhai/index.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
   <link rel="icon" href="images/sinh.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +23,7 @@
     </div>
     <div class="sidebar-footer">
       <div class="user-profile">
-        <img src="icon/profile.jpg" class="user-avatar" alt="mey">
+        <img src="mey/profile.jpg" class="user-avatar" alt="mey">
         <div class="user-info">
           <div class="user-name">យ៉ាន ស៊ីញ</div>
           <div class="user-email">© Synh Corporation</div>
