--- a/synhai/index.html
+++ b/synhai/index.html
@@ -2,8 +2,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
-  <link rel="icon" href="images/sinh.png" type="image/x-icon">
-  <link rel="stylesheet" href="all.min.css">
+  <link rel="icon" href="https://yansinh.gihub.io/mey/sinh.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
   <link rel="stylesheet" href="style.css">
 </head>
