--- a/synhai/index.html
+++ b/synhai/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
-  <link rel="icon" href="https://yansinh.gihub.io/mey/sinh.png" type="image/x-icon">
+  <link rel="icon" href="https://yansinh.gihub.io/csm/img/sinh.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
   <link rel="stylesheet" href="style.css">
@@ -23,10 +23,10 @@
     </div>
     <div class="sidebar-footer">
       <div class="user-profile">
-        <img src="mey/profile.jpg" class="user-avatar" alt="mey">
+        <img src="../mey/profile.jpg" class="user-avatar" alt="mey">
         <div class="user-info">
           <div class="user-name">យ៉ាន ស៊ីញ</div>
-          <div class="user-email">© Synh Corporation</div>
+          <div class="user-email">Ai Private</div>
         </div>
       </div>
     </div>
@@ -47,7 +47,7 @@
         <i class="fas fa-circle"></i>
          <i class="fas fa-circle" style="color:yellow"></i>
           <i class="fas fa-circle" style="color:red"></i>
-        <span style="color:#1f2937">យ៉ាន ស៊ីញ</span>
+        <span style="color:#1f2937"></span>
       </div>
     </div>
     
