--- a/synhai/index.html
+++ b/synhai/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synh AI - ជំនាញវិភាគភាសាធម្មជាតិ</title>
-  <link rel="icon" href="https://yansinh.gihub.io/csm/img/sinh.png" type="image/x-icon">
+  <link rel="icon" href="https://yansinh.github.io/csm/img/sinh.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;500;600&display=swap">
   <link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
         <img src="../mey/profile.jpg" class="user-avatar" alt="mey">
         <div class="user-info">
           <div class="user-name">យ៉ាន ស៊ីញ</div>
-          <div class="user-email">Ai Private</div>
+          <div class="user-email">Private Ai</div>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="logo">
-<!--        <i class="fas fa-robot"></i>-->
+<!--<i class="fas fa-robot"></i>-->
         <span>Synh AI</span>
       </div>
       <div class="status" id="connection-status">
